BUGFIX:Background will not leave whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,18 @@ body{
   background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
               linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
               linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+  background-repeat:no-repeat;
+  background-size:cover;
+  min-height:100vh;
+}
+input, textarea{
+  background-color: hotpink;
+  color:white;
+  border:solid red 1px;
 }
 .container{
   padding:3em;
+  /* height: 110vh; */
 }
 .response{
   display:none;
